assets/scss/classes.scss
.ltr-has-new-line {
  white-space: pre-wrap;
}

// rounded corners
// with same radious as other oruga components
.ltr-corner-rounded {
  border-radius: $base-border-radius;
  overflow: hidden;
}

// Fit on the screen
.ltr-fit {
  max-width: 100%;
  max-height: 85vh;
  min-height: 80vh;
}

// Overlays at position
.ltr-is-center-center {
  align-items: center;
  justify-content: center;
  display: flex;
}
.ltr-is-top-right {
  align-items: flex-start;
  justify-content: right;
  display: flex;
}
.ltr-is-center-left {
  background: none;
  position: fixed;
  left: 20px;
  top: 50%;
  transform: translateY(-50%);
}
.ltr-is-center-right {
  background: none;
  position: fixed;
  right: 20px;
  top: 50%;
  transform: translateY(-50%);
}
.ltr-is-bottom-left {
  align-items: flex-end;
  display: flex;
}
.ltr-is-bottom-right {
  align-items: flex-end;
  justify-content: right;
  display: flex;
}

// Overlays at smaller size for mobile
.ltr-is-smaller-top-right {
  transform: scale(0.7);
  transform-origin: 100% 0%;
}
.ltr-is-smaller-bottom-left {
  transform: scale(0.7);
  transform-origin: 0% 100%;
}
.ltr-is-smaller-bottom-right {
  transform: scale(0.7);
  transform-origin: 100% 100%;
}

// Image preview focus on over
.card-image:hover img {
  transform: scale(1.15);
}
.image {
  overflow: hidden;
}

// make the text white inside the oruga notification
div.media-content {
	color: white;
}

.ltr-sticky {
  position: -webkit-sticky; /* Safari */
  position: sticky;
  top: 0;
}

.ltr-equal-height {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.ltr-full-body {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}
.ltr-main-content {
  flex: 1;
}

// Replicate the bulma size classes for title and subtitle
// because for some unknown reason they are ignored by default
.is-1 {
  font-size: 3rem;
}
.is-2 {
  font-size: 2.5rem;
}
.is-3 {
  font-size: 2rem;
}
.is-4 {
  font-size: 1.5rem;
}
.is-5 {
  font-size: 1.25rem;
}
.is-6 {
  font-size: 1rem;
}
// This is a custom class
.is-7 {
  font-size: 0.75rem;
}

